<resources>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="selectall">Select all</string>
    <string name="all">All</string>

    <!-- listview menu -->
    <string name="default_lv_menu_remove">Remove ...</string>
    <string name="default_lv_menu_new">Add new</string>
    <string name="default_lv_menu_order">Order by</string>
</resources>
