<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:divider="?android:attr/dividerVertical"
    android:dividerPadding="12dip"
    android:showDividers="middle">

    <!-- id must match corresponding menu item id -->
    <LinearLayout
        android:id="@+id/action_cancel"
        style="@style/CustomActionButton"
        android:layout_marginLeft="-10dp">

        <ImageView
            android:src="@drawable/ic_action_cancel"
            style="@style/CustomActionButtonImage" />
        <TextView
            android:text="@string/cancel"
            style="@style/CustomActionButtonText" />

    </LinearLayout>

    <!-- id must match corresponding menu item id -->
    <LinearLayout
        android:id="@+id/action_done"
        style="@style/CustomActionButton"
        android:layout_marginLeft="-10dp">

        <ImageView
            android:src="@drawable/ic_action_accept"
            style="@style/CustomActionButtonImage" />
        <TextView
            android:text="@string/done"
            style="@style/CustomActionButtonText" />
    </LinearLayout>

    <LinearLayout
        style="@style/CustomActionButton"
        android:layout_marginLeft="-10dp">
        <CheckBox
            android:id="@+id/action_selectall"
            android:src="@drawable/ic_menu_done_holo_light"
            android:text="@string/selectall"
            style="@style/CustomActionButtonImage" />
    </LinearLayout>

</LinearLayout>
